fixed category population on querying products
